--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.5.0",
-    "element-plus": "^2.7.4",
+    "element-plus": "^2.7.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.27",
     "vue-clipboard3": "^2.0.0",
     "vue-echarts": "^6.7.3",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.3",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -40,15 +41,15 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "npm-run-all2": "^6.2.0",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "~5.4.5",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.12",
+    "vite": "^5.2.13",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.2.1",
-    "vue-tsc": "^2.0.19"
+    "vue-tsc": "^2.0.21"
   }
 }
