--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "vue": "^3.4.27",
+    "uuid": "^10.0.0",
+    "vue": "^3.4.29",
     "vue-clipboard3": "^2.0.0",
     "vue-echarts": "^6.7.3",
     "vue-router": "^4.3.3"
@@ -47,7 +48,7 @@
     "unplugin-auto-import": "^0.17.6",
     "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.13",
+    "vite": "^5.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.2.1",
     "vue-tsc": "^2.0.21"
