fix: 修正复制的房间url地址

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NODE_ENV = 'development'
 VITE_KEN = 'development'
-VITE_SERVER = 'http://127.0.0.1:3000/pusher.webapi'
+# VITE_SERVER = 'http://127.0.0.1:3000/pusher.webapi'
+VITE_SERVER = '/pusher.webapi'
